website/manifests/deployment.yaml
# Kubernetes deployment manifest for the website service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: stackwizards
spec:
    replicas: 1
    selector:
        matchLabels:
          app: website
    template:
        metadata:
          labels:
            app: website
        spec:
          containers:
            - name: website
              image: registry.digitalocean.com/moksha-production/stackwizards:VERSION
              ports:
                - containerPort: 3000
              imagePullPolicy: Always
              livenessProbe:
                httpGet:
                  path: /robots.txt
                  port: 3000
                initialDelaySeconds: 30
                periodSeconds: 10
                timeoutSeconds: 5
                failureThreshold: 3
              readinessProbe:
                httpGet:
                  path: /robots.txt
                  port: 3000
                initialDelaySeconds: 30
                periodSeconds: 10
                timeoutSeconds: 5
                failureThreshold: 3
