website/manifests/service.yaml
# Service to expose the website
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: stackwizards
spec:
  selector:
    app: website
  ports:
    - protocol: TCP
      targetPort: 3000
      port: 3000
  type: ClusterIP
