website/manifests/ingress.yaml
# Ingress to point stackwizards.com at the website service

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  namespace: stackwizards
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-stg
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-scheme@kubernetescrd
spec:
  tls:
    - hosts:
        - stackwizards.com
        - www.stackwizards.com
      secretName: website-tls
  defaultBackend:
    service:
      name: website
      port:
        number: 3000
  rules:
    - host: stackwizards.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  number: 3000
    - host: www.stackwizards.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  number: 3000
